# game_plau

./: .gitignore  README.md  pyproject.toml
accounts/: views.py
accounts/templates/: login.html  register.html
app/: settings.py  urls.py
app/templates/: base copy.html  base.html  landing_page.html
games/: admin.py  forms.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_game_owner.py  0003_game_landingpage_game_alter_game_console_and_more.py  0004_alter_game_photo.py  0005_remove_game_photo_game_photo_url_alter_game_rating_and_more.py  0006_game_completion_date.py
games/templates/: game_confirm_delete.html  game_detail.html  game_form.html  game_log_form.html  games_list.html  home.html  new_game_log.html
